feat: add LucidiaSystem with metrics and deterministic PRNG

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["types.d.ts"]
+  "include": ["types.d.ts", "src/**/*.ts"]
 }
