--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,24 @@
-# If using token-based HTTPS auth, set this:
-GIT_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+FILE: .env.example
 
-# Optional: override base dir from repos.json (handy for containers)
-CODEX_REPOS_BASE=
+— Lucidia —
 
-# Optional: override SSH key path from repos.json
-CODEX_SSH_KEY=
+NODE_ENV=production
+PORT=8000
+LUCIDIA_INSTANCE=blackroad
+LUCIDIA_LOG_LEVEL=info
 
-# Set to 1 to allow accept-new for unknown SSH host keys (dev convenience)
-CODEX_SSH_ACCEPT_NEW=0
+— Datastores —
+
+REDIS_URL=redis://redis:6379
+MONGO_URL=mongodb://mongo:27017/lucidia
+POSTGRES_URL=postgresql://postgres:postgres@postgres:5432/lucidia
+
+— Security (replace in real deployments) —
+
+JWT_SECRET=change-me
+ENCRYPTION_KEY=32chars_please_change_me_1234
+
+— Observability —
+
+PROMETHEUS_URL=http://prometheus:9090
+GRAFANA_URL=http://grafana:3000
