--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "test": "node tests/smoke.test.js",
     "dev": "npm --prefix sites/blackroad run dev",
     "build": "npm --prefix sites/blackroad run build",
-    "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true"
+    "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true",
+    "start": "node src/comprehensive-lucidia-system.js",
+    "bench:reason": "node scripts/benchmarks/reasoning.js --runs 25 --depth 10 --out ./benchmarks/latest.json",
+    "healthcheck": "node scripts/healthcheck.js"
   },
   "lint-staged": {
     "**/*.{js,mjs,cjs,html,css,md,yml,yaml,json}": [
       "prettier -w"
     ]
-  }
+  },
+  "main": "src/comprehensive-lucidia-system.js"
 }
