feat: add streaming chat with Vercel AI SDK

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ CODEX_SSH_KEY=
 
 # Set to 1 to allow accept-new for unknown SSH host keys (dev convenience)
 CODEX_SSH_ACCEPT_NEW=0
+
+# ---- AI provider selection ----
+AI_PROVIDER=xai          # xai | openai | anthropic
+AI_MODEL=grok-2-1212     # optional; defaults set in lib/ai/models.ts
+
+# ---- Provider keys (set only what you use) ----
+GROK_API_KEY=
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
