--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
-  "include": ["types.d.ts", "src/**/*.ts"]
+  "include": ["types.d.ts", "src/**/*.ts", "app/**/*", "lib/**/*"]
 }
