--- a/apps/portals/package.json
+++ b/apps/portals/package.json
@@ -12,7 +12,13 @@
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@radix-ui/react-icons": "1.3.0"
+    "@radix-ui/react-icons": "1.3.0",
+    "ai": "*",
+    "@ai-sdk/openai": "*",
+    "@ai-sdk/openai-compatible": "*",
+    "@ai-sdk/react": "*",
+    "zod": "*",
+    "ollama-ai-provider-v2": "*"
   },
   "devDependencies": {
     "autoprefixer": "10.4.16",
