--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,3 +3,5 @@
 /services/            @blackboxprogramming
 /**/*.py              @blackboxprogramming
 /**/*.ts              @blackboxprogramming
+
+* @blackroadprogramming/secops @blackroadprogramming/kernel
