chore: add ci and codeql workflows

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,20 +1,30 @@
-name: CodeQL
+name: Security • CodeQL
 on:
-  push: { branches: [ main ] }
+  push:
+    branches: [$default-branch]
   pull_request:
+    branches: [$default-branch]
   schedule:
-    - cron: '0 2 * * 1'
-
+    - cron: "0 9 * * 1"
 permissions:
   contents: read
   security-events: write
-
 jobs:
   analyze:
+    name: CodeQL
     runs-on: ubuntu-latest
-    strategy: { language: [ 'javascript', 'python' ] }
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - uses: github/codeql-action/init@v3
-        with: { languages: ${{ matrix.language }} }
+        with:
+          languages: javascript, python, go, java, ruby, csharp, cpp
+          # packs: | 
+          #   codeql/javascript-queries@latest
+      - uses: github/codeql-action/autobuild@v3
       - uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:multi"
+# (CodeQL v3 is current.) 
+# Ref: https://github.com/github/codeql-action (latest v3) and advanced setup docs. 
+# (Edit the languages list to what you actually use.)
+#
