feat(app): add macOS droplet manager skeleton with security tooling

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,3 +3,4 @@
 /services/            @blackboxprogramming
 /**/*.py              @blackboxprogramming
 /**/*.ts              @blackboxprogramming
+/droplet-manager-macos/ @blackboxprogramming
