--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,22 @@
 name: CI
 on:
-  push: { branches: [ main ] }
   pull_request:
-
-permissions: { contents: read }
-
+  push: { branches: ["main"] }
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: "20", cache: npm }
-      - run: npm ci || npm install
-
-      - name: Build (retry x3)
-        run: |
-          n=0; until [ $n -ge 3 ]; do npm run build && break; n=$((n+1)); echo "Retry #$n…"; sleep 5; done
-
-      - name: Tests (retry x3)
-        run: |
-          n=0; until [ $n -ge 3 ]; do npm test && break; n=$((n+1)); echo "Retry #$n…"; sleep 5; done
-
-      - name: Python lint/tests (if present)
-        uses: actions/setup-python@v5
-        with: { python-version: "3.11", cache: pip }
-      - run: |
-          python -m pip install -r requirements-dev.txt 2>/dev/null || true
-          ruff check . || true
-          pytest -q || true
+      - uses: actions/setup-python@v5
+        with: { python-version: "3.11" }
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml','**/requirements*.txt') }}
+      - run: pip install -U pip && pip install -r requirements.txt || true
+      - run: pip install pre-commit pytest pytest-cov mypy ruff black
+      - name: Pre-commit
+        run: pre-commit run --all-files
+      - name: Test
+        run: pytest --maxfail=1 --disable-warnings -q
