--- a/etc/nginx/sites-available/blackroad-tdb.conf
+++ b/etc/nginx/sites-available/blackroad-tdb.conf
@@ -5,6 +5,9 @@ server {
 
   # ... your existing TLS config, root, etc. ...
 
+  include /etc/nginx/snippets/blackroad-sass.conf;
+  include /etc/nginx/snippets/blackroad-codex-api.conf;
+
   # TDB viewer (internal dev server at 127.0.0.1:1234)
   location /tdb/ {
     proxy_pass http://127.0.0.1:1234/;
