--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,19 @@
-[tool.black]
-line-length = 100
-target-version = ["py311"]
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[tool.isort]
-profile = "black"
+[project]
+name = "literate-enigma"
+version = "0.2.0"
+description = "Lucidia-ready local agent stack with Codex Infinity prompt (no OpenAI)."
+readme = "README.md"
+requires-python = ">=3.10"
+dependencies = [
+  "fastapi>=0.111",
+  "uvicorn[standard]>=0.30",
+  "pydantic>=2",
+  "PyYAML>=6",
+  "requests>=2",
+  "rich>=13"
+]
 
-[tool.ruff]
-line-length = 100
-extend-select = ["I"]
