--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,78 +1,10 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
-    hooks:
-      - id: check-yaml
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
   - repo: https://github.com/psf/black
-    rev: 24.4.2
-    hooks:
-      - id: black
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.5.7
-    hooks:
-      - id: ruff
-        args: ["--fix"]
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.10.0
-    hooks:
-      - id: mypy
+    rev: 24.8.0
+    hooks: [{ id: black }]
+  - repo: https://github.com/pycqa/ruff-pre-commit
+    rev: v0.6.9
+    hooks: [{ id: ruff }]
   - repo: https://github.com/zricethezav/gitleaks
     rev: v8.18.4
-    hooks:
-      - id: gitleaks
-        args: ["detect","--source","."]
-        stages: ["commit","push"]
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        additional_dependencies: ["prettier@^3"]
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v9.12.0
-    hooks:
-      - id: eslint
-        args: ["--fix"]
-        files: "\\.(js|jsx|ts|tsx)$"
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-  - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.18.2
-    hooks:
-      - id: gitleaks
-        args: ["protect", "--staged", "--redact"]
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
-    hooks:
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.3.3
-    hooks:
-      - id: prettier
-        additional_dependencies: []
-        additional_dependencies: ['prettier@3.3.3']
-
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0
-    hooks:
-      - id: prettier
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.56.0
-    hooks:
-      - id: eslint
-        additional_dependencies: [eslint@8.56.0]
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.18.1
-    hooks:
-      - id: gitleaks
+    hooks: [{ id: gitleaks, args: ["--redact"] }]
