--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ secrets/
 /tests/_codex_autogen/
 .tmp/
 *.out.md
+# Allow random field datasets
+!lucidia/modules/random_fields/datasets/
+!lucidia/modules/random_fields/datasets/*.py
+lucidia/modules/random_fields/datasets/__pycache__/
