--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,78 +1,51 @@
 name: CI
 on:
+  push: { branches: [main] }
   pull_request:
-
-permissions: { contents: read }
-  push:
-    branches: [ main ]
-  pull_request:
-
-permissions:
-  contents: read
-
-  push: { branches: ["main"] }
+    paths:
+      - '**.py'
+      - '**.ts'
+      - '**.tsx'
+      - '.pre-commit-config.yaml'
+      - 'package.json'
+      - 'requirements*.txt'
+      - 'pnpm-lock.yaml'
+      - 'yarn.lock'
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: "20", cache: npm }
-      - run: npm ci || npm install
 
-      - name: Build (retry x3)
-        run: |
-          n=0; until [ $n -ge 3 ]; do npm run build && break; n=$((n+1)); echo "Retry #$n…"; sleep 5; done
-
-      - name: Tests (retry x3)
-        run: |
-          n=0; until [ $n -ge 3 ]; do npm test && break; n=$((n+1)); echo "Retry #$n…"; sleep 5; done
-
-      - name: Python lint/tests (if present)
-        uses: actions/setup-python@v5
-        with: { python-version: "3.11", cache: pip }
-      - run: |
-          python -m pip install -r requirements-dev.txt 2>/dev/null || true
-          ruff check . || true
-          pytest -q || true
-      - name: Build (with retry)
-        run: |
-          n=0
-          until [ $n -ge 3 ]; do
-            npm run build && break
-            n=$((n+1))
-            echo "Retry #$n…" && sleep 5
-          done
-
-      - name: Tests (with retry)
-        run: |
-          n=0
-          until [ $n -ge 3 ]; do
-            npm test && break
-            n=$((n+1))
-            echo "Retry #$n…" && sleep 5
-          done
-
-      - name: Python Lint/Test (if present)
-        if: hash python 2>/dev/null
-        uses: actions/setup-python@v5
-        with: { python-version: "3.11", cache: pip }
-      - if: hash python 2>/dev/null
-        run: |
-          python -m pip install -r requirements-dev.txt 2>/dev/null || true
-          ruff check .
-          pytest -q || true
-
+      # Python
       - uses: actions/setup-python@v5
-        with: { python-version: "3.11" }
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml','**/requirements*.txt') }}
-      - run: pip install -U pip && pip install -r requirements.txt || true
-      - run: pip install pre-commit pytest pytest-cov mypy ruff black
+        with: { python-version: '3.11' }
+      - name: Install Python deps
+        run: |
+          python -m pip install -U pip
+          pip install -r requirements.txt || true
+          pip install -r requirements-dev.txt || true
+
+      # Node (TS/JS)
+      - uses: actions/setup-node@v4
+        with: { node-version: '20' }
+      - name: Install Node deps
+        run: |
+          if [ -f package-lock.json ]; then npm ci; fi
+          if [ -f pnpm-lock.yaml ]; then corepack enable && pnpm -v && pnpm i --frozen-lockfile; fi
+          if [ -f yarn.lock ]; then yarn install --frozen-lockfile; fi
+
       - name: Pre-commit
-        run: pre-commit run --all-files
-      - name: Test
-        run: pytest --maxfail=1 --disable-warnings -q
+        run: |
+          pip install pre-commit || true
+          pre-commit run --all-files || (git status --porcelain && exit 1)
+
+      - name: Python tests
+        if: ${{ hashFiles('pytest.ini','pyproject.toml') != '' }}
+        run: |
+          if command -v pytest >/dev/null 2>&1; then pytest -q; fi
+
+      - name: TS/JS tests
+        if: ${{ hashFiles('package.json') != '' }}
+        run: |
+          npm test --if-present
