--- a/nginx/conf.d/lucidia-sites.conf
+++ b/nginx/conf.d/lucidia-sites.conf
@@ -38,6 +38,15 @@ server {
   add_header X-XSS-Protection "1; mode=block" always;
   include snippets/job_applier.conf;
 
+  location /api/quantum/ {
+    proxy_pass http://127.0.0.1:8003;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
     location /api/ {
       limit_req zone=api burst=20 nodelay;
       proxy_pass http://blackroad_app;
