--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node -e \"console.log('no tests')\""
   },
   "dependencies": {
     "cors": "^2.8.5",
