--- a/nginx/blackroad.io.conf
+++ b/nginx/blackroad.io.conf
@@ -1,40 +1,35 @@
-server {
-  listen 80;
-  listen [::]:80;
-  server_name blackroad.io www.blackroad.io;
-  return 301 https://$host$request_uri;
-}
+# Production nginx for BlackRoad.io
+# Serves the built site and proxies API/WS to the bridge on :4000
 
 server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  server_name blackroad.io www.blackroad.io;
+    listen 80;
+    listen [::]:80;
+    server_name blackroad.io www.blackroad.io;
 
-  ssl_certificate /etc/letsencrypt/live/blackroad.io/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/blackroad.io/privkey.pem;
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    # static site (adjust path to where CI or ops syncs dist/)
+    root /var/www/blackroad;
+    index index.html;
+    access_log /var/log/nginx/blackroad.access.log;
+    error_log  /var/log/nginx/blackroad.error.log;
 
-  root /var/www/blackroad;
-  index index.html;
+    # SPA fallback
+    location / {
+        try_files $uri /index.html;
+    }
 
-  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    # API proxy
+    location /api/ {
+        proxy_pass http://127.0.0.1:4000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
 
-  location / {
-    try_files $uri /index.html;
-  }
-
-  location /api/ {
-    proxy_pass http://127.0.0.1:4000/;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-  }
-
-  location /ws {
-    proxy_pass http://127.0.0.1:4000/ws;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-  }
+    # WebSocket proxy
+    location /ws {
+        proxy_pass http://127.0.0.1:4000/ws;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+    }
 }
