--- a/nginx/blackroad.io.conf
+++ b/nginx/blackroad.io.conf
@@ -13,7 +13,7 @@ server {
 
     # SPA fallback
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     # API proxy
