--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build:lucidia-create": "npx tsc -p packages/lucidia-create/tsconfig.json",
+    "build:lucidia-create": "npx tsc -p packages/lucidia-create/tsconfig.json --noEmit false --outDir packages/lucidia-create/dist",
     "test": "npm run build:lucidia-create && node tests/smoke.test.js && node --test tests/*.mjs"
   }
 }
