--- a/packages/lucidia-create/tsconfig.json
+++ b/packages/lucidia-create/tsconfig.json
@@ -1,12 +1,20 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ES2020",
-    "declaration": true,
-    "outDir": "dist",
-    "rootDir": "./",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
     "strict": true,
-    "esModuleInterop": true
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true
   },
-  "include": ["index.ts", "sim/**/*.ts", "security/**/*.ts", "truth/**/*.ts"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
